fixed padding for navbar on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 
 @layer components {
 	.nav-link {
-		@apply  text-white md:text-2xl hover:text-landscape-700 transition duration-700 
+		@apply  text-gray-100 md:text-2xl hover:text-white transition duration-700 
 	}
 	.button-link {
 		@apply bg-landscape-700 p-2 shadow-md text-2xl my-7 md:my-12   text-white  hover:bg-opacity-75 cursor-pointer transition duration-500 font-spaces
